<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".FBDescription"
    android:background="#CCFFFF" >
    
    <ImageView 
        android:id="@+id/profilepic"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_height="80dp"
        android:layout_width="60dp"
        android:src="@drawable/ic_launcher"
        android:background="@drawable/picborder"
        android:clickable="true"/>
    
    <TextView
        android:id="@+id/fbname"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:scrollHorizontally="true"
        android:layout_toRightOf="@+id/profilepic"
        android:layout_marginLeft="10dp"
        android:text="@string/testfbname"
        android:textSize="30sp"
        android:scrollbars="horizontal"/>
    
    <Button
        android:id="@+id/fbphotosbutton"
        android:layout_width="fill_parent"
        android:layout_below="@+id/birthday"
        android:layout_marginTop="40dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:text="@string/photosbutton"/>
    
    <TextView 
        android:id="@+id/fbbioname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profilepic"
        android:layout_marginTop="25dp"
        android:textSize="20sp"/>
    
    <TextView
        android:id="@+id/fbbio"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fbbioname"
        android:clickable="true"
        android:layout_marginTop="10dp"
        android:text="@string/bio"
        android:background="@drawable/picborder"
        android:padding="10dp"
        android:maxLines="5"
        android:scrollbars="vertical"/>

	<TextView 
	    android:id="@+id/birthday"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:layout_below="@+id/fbbio"
	    android:layout_marginTop="40dp"
	    android:layout_alignParentLeft="true"
	    android:layout_marginLeft="10dp"
	    android:text="@string/bir"
	    android:textSize="20sp"/>
	
	<TextView 
	    android:id="@+id/friendbirthday"
	    android:layout_height="wrap_content"
	    android:layout_width="wrap_content"
	    android:layout_toRightOf="@+id/birthday"
	    android:layout_below="@+id/fbbio"
	    android:layout_marginTop="40dp"
	    android:layout_marginLeft="3dp"
	    android:textSize="20sp"/>
</RelativeLayout>
