<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ContactDescription" 
    android:background="#CCFFFF">

	<ImageView 
        android:id="@+id/ctcpic"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_height="80dp"
        android:layout_width="60dp"
        android:src="@drawable/ic_launcher"
        android:background="@drawable/picborder"
        android:clickable="true"/>
    
    <TextView
        android:id="@+id/ctcname"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:scrollHorizontally="true"
        android:layout_toRightOf="@+id/ctcpic"
        android:layout_marginLeft="10dp"
        android:text="@string/ctcname"
        android:textSize="30sp"
        android:scrollbars="horizontal"/>
    
    <TextView 
        android:id="@+id/phnumtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ctcpic"
        android:layout_marginTop="40dp"
        android:text="@string/phnumber"
        android:textSize="20sp"/>
    
    <TextView 
        android:id="@+id/phnum"
        android:layout_toRightOf="@+id/phnumtxt"
        android:layout_below="@+id/ctcpic"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="3dp"
        android:textSize="20sp"/>
    
    <TextView 
        android:id="@+id/emailtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phnumtxt"
        android:layout_marginTop="40dp"
        android:text="@string/emailtxt"
        android:textSize="20sp"/>
    
    <TextView 
        android:id="@+id/email"
        android:layout_toRightOf="@+id/emailtxt"
        android:layout_below="@+id/phnumtxt"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="3dp"
        android:textSize="20sp"/>
    
    <TextView 
        android:id="@+id/ctcnotename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailtxt"
        android:layout_marginTop="40dp"
        android:textSize="20sp"/>
    
    <TextView
        android:id="@+id/ctcnote"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ctcnotename"
        android:clickable="true"
        android:layout_marginTop="10dp"
        android:text="@string/note"
        android:background="@drawable/picborder"
        android:padding="10dp"
        android:maxLines="5"
        android:scrollbars="vertical"/>
   
</RelativeLayout>
